--- a/OneDrive/Desktop/netflix/index.html
+++ b/OneDrive/Desktop/netflix/index.html
@@ -14,25 +14,28 @@
     <div class="section_images">
         <div class="section_image1">
             <img src="./adu1.jpg" alt="image" class="person">
-            <h2>Adil</h2>
+            <h2><button class="button">Adil1</button></h2>
         </div>
         <div class="section_image2">
             <img src="./adu2.jpg" alt="image" class="person">
-            <h2>Adil2</h2>
+            <h2><button class="button">Adil2</button></h2>
         </div>
         <div class="section_image3">
             <img src="./adu3.jpg" alt="" class="person">
-            <h2>Adil3</h2>
+            <h2><button class="button">Adil3</button></h2>
         </div>
         <div class="section_image4">
+             
             <img src="./sona.jpg" alt="image" class="person">
-            <h2>Sonam</h2>
+            <h2><button class="button">Sonam</button></h2>
         </div>
         <div class="section_image5">
             <img src="./sona1.jpg" alt="image" class="person">
-            <h2>Sona</h2>
+            <h2><button class="button">Sona</button></h2>
         </div>
+       
     </div>
+    <button>Log-In</button>
 </div>  
 </body>
 </html>
