--- a/OneDrive/Desktop/new1/index.html
+++ b/OneDrive/Desktop/new1/index.html
@@ -51,7 +51,7 @@
                         <li><a class="data" href="./digital technology.html">Digital technology</a> </li></ol>
                 </ul> 
         </div>
-        <p>Name : <br> Sonam Pathan</p>
+        <p>Name : <br> Sonam Raju Pathan</p>
         <p>Email addres: <a class="email" href="#">sonamrajupathan@gmail.com</a></p>
     </fieldset></div>
 </body>
